test/parse/bad-references.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-function-references
;;; ERROR: 1
(module
  ;; Implicit type declarations are not allowed
  (type $t0 (func (param (ref 2))))
  (type $t1 (func (param (ref 33)) (result (ref 444))))

  (func $f (param $p1 (ref 5555))
    (local $p2 (ref 66666))
  )
)
(;; STDERR ;;;
0:0: error: reference 5555 is out of range in params
0:0: error: reference 33 is out of range in params
0:0: error: reference 444 is out of range in results
out/test/parse/bad-references.txt:9:12: error: reference 66666 is out of range in locals
  (func $f (param $p1 (ref 5555))
           ^
;;; STDERR ;;)
